[package]
name = "txtvec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
anyhow = { version = "1", features = ["backtrace"] }
candle = { version = "0.1.0", package = "candle-core" }
candle-nn = { version = "0.1.0" }
candle-transformers = { version = "0.1.0" }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
hf-hub = "0.2.0"
tokenizers = { version = "0.13.3", default-features = false }
